fix: Docker Compose API 서비스 및 webapp DB 설정 수정
 파일에 API 서비스 실행 명령어를 추가하고, 에서 발생하는 데이터베이스 이름 불일치 오류를 수정합니다.

* **docker-compose.yml:**
    *  서비스에 를 추가했습니다.
    * 이 명령어를 통해 컨테이너가 시작될 때 FastAPI 애플리케이션이 자동으로 실행되도록 설정하여 서비스의 정상적인 구동을 보장합니다.
    * 이를 통해 API 서비스 컨테이너가 의도한대로 동작하도록 구성했습니다.

* **scripts/webapp.py:**
    * 데이터베이스 이름 불일치로 인해 발생하는 오류를 해결했습니다.
    *  파일에 정의된 데이터베이스 이름인 'postgres'를 사용하도록 수정하여 애플리케이션이 올바른 데이터베이스에 연결할 수 있도록 했습니다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 # ==============================
 services:
   # --------------------------------
-  # PostgreSQL(Airflow 내부 DB)
+  # 데이터 수집/전처리 후 PostgreSQL 저장
   # --------------------------------
   mlops-extract-data:
     image: postgres:13                          # PostgreSQL 공식 이미지(버전 13)
@@ -67,6 +67,7 @@ services:
       dockerfile: ${DOCKER_API}
     image: jkim1209/mlops-api:1.0.2
     container_name: mlops-api
+    command: uvicorn scripts.webapp:app --host 0.0.0.0 --port 8000
     ports:
       - "8000:8000"
     env_file:
