feat: #79 alertmanager > ERROR, WARN 로그에 대한 알림 처리 추가

--- a/services/monitoring/infra/docker-compose.yml
+++ b/services/monitoring/infra/docker-compose.yml
@@ -6,6 +6,19 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus/alert-rules.yml:/etc/prometheus/alert-rules.yml:ro
+    networks:
+      - monitoring-network
+
+  alertmanager:
+    image: prom/alertmanager:v0.27.0
+    container_name: alertmanager
+    volumes:
+      - ./alertmanager:/etc/alertmanager
+    command:
+      - '--config.file=/etc/alertmanager/alertmanager.yml'
+    ports:
+      - "9093:9093"
     networks:
       - monitoring-network
 
