김장원 팀원의 FastAPI 테스트 관련 작업 내용을 병합하고, Docker Compose 설정을 수정하며 로그 관리 스크립트를 추가합니다.
- **`docker-compose.yml`**: Docker Compose 파일에 새로운 서비스와 설정을 추가하거나 기존 설정을 수정하여 FastAPI 테스트 환경을 지원합니다.
- **`services/frontend/dockerfile`**: 프론트엔드 서비스용 Dockerfile을 수정하여 FastAPI 테스트 환경과 관련된 설정을 반영합니다.
- **`scripts/log/docker_save_log.sh`**: Docker 컨테이너의 로그를 주기적으로 저장하는 쉘 스크립트를 추가합니다. 이 스크립트는 `my-mlops-api`, `my-mlops-db`, `my-mlops-frontend`, `my-mlops-model` 서비스의 로그를 `logs` 디렉토리 아래에 타임스탬프를 포함한 파일로 저장합니다.
- **`.gitignore`**: Git 관리에서 제외할 파일 및 디렉토리 목록을 업데이트하여 로그 파일이나 임시 파일이 커밋되지 않도록 합니다.
- **`.paths/paths.env`**: 프로젝트 경로 환경 변수를 업데이트하여 변경된 디렉토리 구조를 반영합니다.
- **`scripts/dataset/watch_log.py`**: 데이터셋 스크립트가 수정되어 FastAPI 테스트와 관련된 데이터 처리 로직이 변경되었습니다.

--- a/.paths/paths.env
+++ b/.paths/paths.env
@@ -55,16 +55,11 @@ export SERVICES_FEATURE_ENGINEERING_DIR=./services/feature_engineering          
 export SERVICES_MODEL_INFERENCE_DIR=./services/model_inference                  # 모델 학습 서비스
 export SERVICES_MONITORING_DIR=./services/monitoring                            # 모니터링 서비스
 
-#--- 플러그인 디렉토리 ---#
-export PLUGINS_AIRFLOW_DIR=./plugins/airflow                                    # Airflow 플러그인 경로
-
 #--- 서비스별 Dockerfile 경로 ---#
 export DOCKER_MODEL_INFERENCE=./services/model_inference/dockerfile             # 모델 학습 서비스 Dockerfile
 export DOCKER_API=./services/api/dockerfile                                     # API 서비스 Dockerfile
 export DOCKER_AIRFLOW=./services/airflow/Dockerfile                             # Airflow 서비스 Dockerfile
-export DOCKER_WORKERS=./services/workers/Dockerfile                             # 워커 서비스 Dockerfile
-export DOCKER_FEATURE_ENGINEERING=./services/feature_engineering/Dockerfile     # 피처 엔지니어링 서비스 Dockerfile
-export DOCKER_MONITORING=./services/monitoring/Dockerfile                       # 모니터링 서비스 Dockerfile
+export DOCKER_REACT=./services/frontend/dockerfile                              # React Dockerfile
 
 #--- 기타 파일 경로 ---#
 export ENV_PATH=.env
