--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
   # --------------------------------
   # 데이터 수집/전처리 후 PostgreSQL 저장
   # --------------------------------
-  mlops-extract-data:
+  my-mlops-db:
     image: postgres:13                          # PostgreSQL 공식 이미지(버전 13)
-    container_name: extract-data                # 컨테이너 이름
+    container_name: ${DB_HOST}                  # 컨테이너 이름
     environment:
       POSTGRES_USER: ${POSTGRES_USER}           # DB 계정명
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}   # DB 비밀번호
@@ -15,9 +15,9 @@ services:
     ports:
       - ${DB_PORT}:${DB_PORT}                   # 호스트:컨테이너 포트(5432)
     volumes:
-      - postgres_data:/var/lib/postgresql/data  # 데이터 파일을 로컬 볼륨에 영구 저장
+      - db_data:/var/lib/postgresql/data        # 데이터 파일을 로컬 볼륨에 영구 저장
     networks:
-      - mlops_network                        # 동일 네트워크(통신)
+      - my-mlops-network                        # 동일 네트워크(통신)
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"] # DB 준비상태 체크
       interval: 5s                              # 체크 주기
@@ -28,12 +28,14 @@ services:
   # --------------------------------
   # 모델 학습 및 추론 서비스
   # --------------------------------
-  mlops-model-inference:
+  my-mlops-model:
     build:
       context: .                                          # 빌드 컨텍스트를 상위 디렉토리로 설정
       dockerfile: ${DOCKER_MODEL_INFERENCE}               # Dockerfile 경로
-    image: jkim1209/mlops-project:1.2.0                   # 이미지 이름 및 태그
-    container_name: model-inference                       # 컨테이너 이름
+      args:
+        EXCLUDE_FRONTEND: "true"
+    image: jkim1209/mlops-model:1.4.3                     # 이미지 이름 및 태그
+    container_name: my-mlops-model                        # 컨테이너 이름
     environment:
       DB_HOST: ${DB_HOST}
       DB_NAME: ${DB_NAME}
@@ -48,25 +50,25 @@ services:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_REGION: ${AWS_REGION}
+    networks:
+      - my-mlops-network
+    depends_on:
+      - my-mlops-db  
     healthcheck:
       test: ["CMD-SHELL", "echo", "healthcheck"]
       interval: 1m30s
       timeout: 10s
       retries: 3
-    networks:
-      - mlops_network
-    depends_on:
-      - mlops-extract-data  # 데이터 수집/전처리 후 준비 완료 후 시작   
 
   # --------------------------------
-  # API 서비스
+  # FastAPI 서비스
   # --------------------------------
-  mlops-api:
+  my-mlops-api:
     build:
       context: .
       dockerfile: ${DOCKER_API}
-    image: jkim1209/mlops-api:1.0.2
-    container_name: mlops-api
+    image: jkim1209/mlops-api:1.3.3
+    container_name: my-mlops-api
     command: uvicorn scripts.webapp:app --host 0.0.0.0 --port 8000
     ports:
       - "8000:8000"
@@ -78,23 +80,50 @@ services:
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
+    networks:
+      - my-mlops-network
+    depends_on:
+      my-mlops-db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl --fail http://localhost:8000/docs || exit 1"]  # /docs 엔드포인트 200 OK 확인
       interval: 10s                                     # 헬스체크 주기(10초)
       timeout: 10s                                      # 응답 대기(10초)
       retries: 3                                        # 최대 3번 재시도
       start_period: 20s                                 # 컨테이너 기동 후 최초 체크까지 대기(20초)
-    networks:
-      - mlops_network
+    restart: always
+
+
+# ==============================
+# React 프론트엔드 서비스
+# ==============================
+  my-mlops-frontend:
+    build:
+      context: .
+      dockerfile: ${DOCKER_REACT}
+    image: jkim1209/mlops-frontend:1.1.1
+    container_name: my-mlops-frontend
+    ports:
+      - "3000:3000"
+    environment:
+      - REACT_APP_API_ENDPOINT=http://my-mlops-api:8000
     depends_on:
-      - mlops-extract-data  # 데이터 수집/전처리 후 준비 완료 후 시작 
+      - my-mlops-api
+    networks:
+      - my-mlops-network
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:3000 || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
 # ==============================
 # Docker 볼륨 및 네트워크 정의
 # ==============================
 volumes:
-  postgres_data:      # PostgreSQL 데이터 파일 영구 저장용 도커 볼륨
+  db_data:      # PostgreSQL 데이터 파일 영구 저장용 도커 볼륨
 
 networks:
-  mlops_network:    # Airflow, DB, Redis, Flower 등 모든 서비스가 연결되는 네트워크
+  my-mlops-network:    # Airflow, DB, Redis, Flower 등 모든 서비스가 연결되는 네트워크
     driver: bridge    # 브리지 네트워크(컨테이너 통신 전용)
