chore: 불필요한 경로 삭제

--- a/.paths/paths.env
+++ b/.paths/paths.env
@@ -56,10 +56,11 @@ export SERVICES_MODEL_INFERENCE_DIR=./services/model_inference                  
 export SERVICES_MONITORING_DIR=./services/monitoring                            # 모니터링 서비스
 
 #--- 서비스별 Dockerfile 경로 ---#
+export DOCKER_REACT=./services/frontend/dockerfile
 export DOCKER_MODEL_INFERENCE=./services/model_inference/dockerfile             # 모델 학습 서비스 Dockerfile
 export DOCKER_API=./services/api/dockerfile                                     # API 서비스 Dockerfile
 export DOCKER_AIRFLOW=./services/airflow/Dockerfile                             # Airflow 서비스 Dockerfile
-export DOCKER_REACT=./services/frontend/dockerfile                              # React Dockerfile
+export DOCKER_MONITORING=./services/monitoring/Dockerfile                       # 모니터링 서비스 Dockerfile
 
 #--- 기타 파일 경로 ---#
 export ENV_PATH=.env
