feat: my-mlops-api 서비스 컨테이너에 필수 패키지 curl 추가

--- a/services/api/dockerfile
+++ b/services/api/dockerfile
@@ -6,7 +6,7 @@ WORKDIR /mlops-project
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
-    gcc \
+    gcc curl \
     && rm -rf /var/lib/apt/lists/*
 
 # requirements 설치
