conf: Docker Compose 설정 및 Airflow 파이프라인 스크립트 수정
Airflow DAG 실행 스케줄과 컨테이너 구동 방식을 변경하고, 새로운 로그 관리 스크립트를 추가하여 MLOps 환경을 개선했습니다.

* **`docker-compose.yaml`**: `scheduler`와 `webserver` 컨테이너의 `command` 필드에 `--hostname` 옵션을 명시적으로 추가하여 서비스의 안정성을 높였습니다.
* **`dags/mlops-pipeline_dag.py`**: DAG의 실행 주기를 3분에서 10분으로 변경하여 파이프라인 실행 간격을 늘렸습니다.
* **`scripts/airflow/pipeline_tasks.py`**: Airflow 태스크에서 사용되는 스크립트의 로직을 수정했습니다.
* **`scripts/log/docker_save_log.sh`**: Docker 컨테이너의 로그를 주기적으로 저장하는 쉘 스크립트를 추가했습니다. 이 스크립트는 `my-mlops-api`, `my-mlops-db`, `my-mlops-frontend`, `my-mlops-model` 서비스의 로그를 `logs` 디렉토리 아래에 타임스탬프를 포함한 파일로 저장합니다.
* **`logs/airflow/scheduler/latest`**: Airflow 스케줄러의 최신 로그 파일이 수정되어 파이프라인 실행 이력이 기록되었습니다.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ x-airflow-common: &airflow-common
     AIRFLOW__CORE__LOGGING_LEVEL: INFO                                          # 로그 레벨(INFO 고정)
     AIRFLOW__WEBSERVER__WEB_SERVER_PORT: ${AIRFLOW__WEBSERVER__WEB_SERVER_PORT} # Webserver 포트(8080)
     AIRFLOW__WEBSERVER__WEB_SERVER_HOST: ${AIRFLOW__WEBSERVER__WEB_SERVER_HOST} # Webserver 호스트(모든 IP에서 접근 가능)
+    SERVER_1_IP_ADDRESS: ${SERVER_1_IP_ADDRESS}                                 # 서버 1 IP 주소
     PYTHONPATH: /opt/airflow:/opt/airflow/scripts                               # Airflow 스크립트 경로 추가 
   env_file:
     - ${ENV_PATH}                                                                      # 민감정보, 환경변수 파일(${ENV_PATH})
