--- a/services/frontend/docker-compose.yml
+++ b/services/frontend/docker-compose.yml
@@ -5,16 +5,16 @@ services:
     build:
       context: ../../
       dockerfile: services/frontend/Dockerfile
-    image: jkim1209/mlops-frontend:1.1.1
+    image: jkim1209/mlops-frontend:1.2.0
     container_name: my-mlops-frontend
     ports:
       - "3000:3000"
-    environment:
-      - REACT_APP_API_ENDPOINT=http://my-mlops-api:8000
     depends_on:
       - my-mlops-api
     networks:
       - my-mlops-network
+    volumes:
+      - ./env.js:/usr/share/nginx/html/env.js
 
 networks:
   my-mlops-network:
