feat: server3 모니터링을 위한 클라이언트 코드 파일 추가. 환경 설정

--- a/.paths/paths.env
+++ b/.paths/paths.env
@@ -63,3 +63,18 @@ export DOCKER_MONITORING=./services/monitoring/Dockerfile                       
 
 #--- 기타 파일 경로 ---#
 export ENV_PATH=.env
+
+# scripts
+export SCRIPTS_MONITORING=./scripts/monitoring
+export SCRIPTS_MONITORING_INFRA=./scripts/monitoring/infra
+export SCRIPTS_MONITORING_CLIENT=./scripts/monitoring/client
+
+# service
+export SERVICES_MONITORING=./services/monitoring
+SERVICES_MONITORING_INFRA=./services/monitoring/infra
+export export SERVICES_MONITORING_CLIENT=./services/monitoring/client
+
+# Service > Monitoring env
+export HOME_DIR=/home/ubuntu            # 서버 홈 디렉토리 경로 설정
+export GRAFANA_DATA_DIR=grafana-data
+export LOKI_DATA_DIR=loki-data
