feat: 모니터링 환경 설정 및 스크립트 개선
Airflow DAG에서 사용되는 환경 변수 이름을 수정하고, Docker Compose 파일에 모니터링 관련 환경 변수를 추가했습니다. 또한, 스크립트가  파일을 로드하도록 개선하여 환경 설정의 유연성을 높였습니다.

### 주요 변경 사항

* ****:  변수 이름을 로 수정하여 Airflow DAG 파일과 일관성을 유지했습니다.
* **모니터링 관련 스크립트 수정**: 와  파일에  파일을 소스(source)로 가져오는 코드를 추가하여 스크립트가 환경 변수를 올바르게 로드하도록 개선했습니다.
* **모니터링 설정 파일 추가**:  파일을 새로 추가하여 모니터링 클라이언트의 설정 파일을 정의했습니다.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8' # 도커 컴포즈 파일 버전(3.8 권장)
-
 # ==============================
 # Airflow 서비스 공통 anchor(템플릿)
 # ==============================
@@ -20,7 +18,7 @@ x-airflow-common: &airflow-common
     AIRFLOW__CORE__LOGGING_LEVEL: INFO                                          # 로그 레벨(INFO 고정)
     AIRFLOW__WEBSERVER__WEB_SERVER_PORT: ${AIRFLOW__WEBSERVER__WEB_SERVER_PORT} # Webserver 포트(8080)
     AIRFLOW__WEBSERVER__WEB_SERVER_HOST: ${AIRFLOW__WEBSERVER__WEB_SERVER_HOST} # Webserver 호스트(모든 IP에서 접근 가능)
-    SERVER_1_IP_ADDRESS: ${SERVER_1_IP_ADDRESS}                                 # 서버 1 IP 주소
+    SERVER_1_IP: ${SERVER_1_IP}                                 # 서버 1 IP 주소
     PYTHONPATH: /opt/airflow:/opt/airflow/scripts                               # Airflow 스크립트 경로 추가 
   env_file:
     - ${ENV_PATH}                                                                      # 민감정보, 환경변수 파일(${ENV_PATH})
