refactor: 로깅 기능 추가 및 코드 개선
로깅 기능을 추가하고, `webapp.py` 파일의 메서드에서 로거를 참조하도록 코드를 수정하며, 들여쓰기 오류를 수정했습니다. 또한, Docker 서비스 로그 파일들을 추가했습니다.

* **`scripts/webapp.py`**:
    * 메서드 인자에 로거를 추가하여 로깅 기능을 구현했습니다.
    * 코드 들여쓰기 오류를 수정하여 가독성을 높였습니다.
* **`.paths/paths.env`**:
    * 경로 환경 변수를 업데이트하여 변경된 파일 구조를 반영했습니다.
* **`logs/docker-services`**:
    * `my-mlops-api`, `my-mlops-db`, `my-mlops-frontend`, `my-mlops-model` 서비스의 로그 파일들을 추가하여 로깅 기능이 정상적으로 작동함을 나타냅니다.
* **`scripts/dataset/data_loader.py`**:
    * 데이터 로더 스크립트가 수정되어 FastAPI 테스트와 관련된 데이터 처리 로직이 변경되었습니다.

--- a/.paths/paths.env
+++ b/.paths/paths.env
@@ -63,6 +63,7 @@ export DOCKER_MONITORING=./services/monitoring/Dockerfile                       
 
 #--- 기타 파일 경로 ---#
 export ENV_PATH=.env
+export LOGGER_PATH=.scripts/utils/logger.py
 
 # scripts
 export SCRIPTS_MONITORING=./scripts/monitoring
