fix: 기존 'project_path()' 파일 위치 기준 루트 경로 반환하는 부분 도커 실행시, 상대경로 충돌 날 수 있음. paths.env에 정의하여 대체함.

--- a/.paths/paths.env
+++ b/.paths/paths.env
@@ -63,7 +63,8 @@ export DOCKER_MONITORING=./services/monitoring/Dockerfile                       
 
 #--- 기타 파일 경로 ---#
 export ENV_PATH=.env
-export LOGGER_PATH=.scripts/utils/logger.py
+export PATH_ENV_PATH=./.paths/paths.env
+export LOGGER_PATH=./scripts/utils/logger.py
 
 # scripts
 export SCRIPTS_MONITORING=./scripts/monitoring
